--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ flutter:
   assets:
     - assets/
     - assets/bottom_nav_icons/
+    - assets/list_view_image/
+    - assets/list_view_image_2/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
