--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/bottom_nav_icons/
     - assets/list_view_image/
     - assets/list_view_image_2/
+    - assets/homeCareScheme/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
