--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
     - assets/list_view_image/
     - assets/list_view_image_2/
     - assets/homeCareScheme/
+    - assets/discount_products/
+    - assets/hits/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
